[package]
name = "replay"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to record and replay shell commands"
readme = "README.md"
license = "MIT"
repository = "https://github.com/baptleduc/replay"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"
