[package]
name = "replay"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to record and replay shell commands"
readme = "README.md"
license = "MIT"
repository = "https://github.com/baptleduc/replay"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
portable-pty = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
temp-env = "0.3.6"
tempfile = "3.20.0"
thiserror = "2.0.12"
whoami = "1.6.0"
